# shopkeep

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  ETSY_MIGRATION.md  MOCK_ETSY_API.md  PLANNED_FEATURES.md  README.md  SETUP.md  Taskfile.yml  Tiltfile  cliff.toml  discord_bot.py  docker-compose.yml  example_integration.py  mock_etsy_client.py  package-lock.json  package.json  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml  deploy.yml  release.yml
docker/: Dockerfile.bot  Dockerfile.etsy  Dockerfile.web  README.md
manifests/: deployment.yaml  ingress.yaml  kustomization.yaml  mock-etsy-deployment.yaml  namespace.yaml  pvc.yaml  secret.yaml  web-deployment.yaml
scripts/: etsy_auth.py
src/bot/: COMMANDS.md  db.py  discord_bot.py  notifier.py
src/etsy/: __init__.py  client.py  mock_api.py
src/shippo/: client.py
src/usps/: client.py
src/web/: app.py  db.py
src/web/static/css/: input.css
src/web/templates/: 404.html  about.html  base.html  changelog.html  commands.html  connect.html  error.html  index.html  layout.html  privacy.html  success.html  terms.html
tests/: conftest.py  test_bot_db.py  test_etsy_client.py  test_notifier.py  test_web_db.py  test_web_routes.py
